--- a/cpk-pentaho/ivy.xml
+++ b/cpk-pentaho/ivy.xml
@@ -31,7 +31,7 @@
         <dependency org="commons-io"           name="commons-io"          rev="1.4"   transitive="false" />
         <dependency org="commons-lang"         name="commons-lang"        rev="2.4"   transitive="false" />
         <dependency org="commons-logging"      name="commons-logging-api" rev="1.0.4" transitive="false" />
-        <dependency org="dom4j"                name="dom4j"               rev="1.6.1" transitive="false" />
+        <dependency org="org.dom4j"            name="dom4j"               rev="2.1.1" transitive="false" />
         <dependency org="org.codehaus.jackson" name="jackson-core-asl"    rev="1.8.2" transitive="false" />
         <dependency org="org.codehaus.jackson" name="jackson-mapper-asl"  rev="1.8.2" transitive="false" />
 
