--- a/core/pom.xml
+++ b/core/pom.xml
@@ -143,11 +143,14 @@
       <artifactId>slf4j-log4j12</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- Only needed for runtime testing-->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- -->
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-mock</artifactId>
