[PPP-4283] Use of Vulnerable Components: commons-httpclient-3.0.1.jar and httpclient-4.0.1.jar (sonatype-2007-0004 | CVE-2011-1498 | CVE-2012-6153 | CVE-2012-5783)

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -151,6 +151,7 @@
       <artifactId>spring-mock</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- httpclient/httpcore needed for testing -->
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
