--- a/core/pom.xml
+++ b/core/pom.xml
@@ -72,8 +72,9 @@
       <artifactId>jackson-core-asl</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-mapper-asl</artifactId>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${fasterxml-jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>javax.ws.rs</groupId>
